--- a/code.html
+++ b/code.html
@@ -351,7 +351,7 @@
             <div class="container">
                 <div style="overflow-x:auto;">
                     <table id="example" class="display table-warning " style="width:150%">
-                        <thead class="table-dark">
+                        <thead class="table-warning">
                             <tr>
                                 <th>NO</th>
                                 <th>TYPE </th>
