--- a/code.html
+++ b/code.html
@@ -160,6 +160,53 @@
                 </div>
             </div>
         </section>
+
+         <div class="services-area">
+            <div class="container">
+                <div class="row justify-content-sm-center">
+                    <div class="col-lg-4 col-md-6 col-sm-8">
+                        <div class="single-services mb-30">
+                            <div class="features-icon">
+                                <img src="assets/img/icon/icon1.svg" alt="">
+                            </div>
+                            <div class="features-caption" style="text-align: justify;">
+                                <h3>SCHOOLS</h3>
+                                <p>
+                                    Online systems are the best tool to manage educational institutions efficiently and effectively.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-8">
+                        <div class="single-services mb-30">
+                            <div class="features-icon">
+                                <img src="assets/img/icon/icon1.svg" alt="">
+                            </div>
+                            <div class="features-caption" style="text-align: justify;">
+                                <h3>INSTITUTES</h3>
+                                <p>
+                                    Online systems are the best tool to manage educational institutions efficiently and effectively.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-8">
+                        <div class="single-services mb-30">
+                            <div class="features-icon">
+                                <img src="assets/img/icon/icon1.svg" alt="">
+                            </div>
+                            <div class="features-caption" style="text-align: justify;">
+                                <h3>UNIVERSITIES</h3>
+                                <p>
+                                    Online systems are the best tool to manage educational institutions efficiently and effectively.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        
         <!-- ? services-area 
         <div class="services-area">
             <div class="container">
