--- a/code.html
+++ b/code.html
@@ -172,7 +172,7 @@
                             <div class="features-caption" style="text-align: justify;">
                                 <h3>SCHOOLS</h3>
                                 <p>
-                                    Online systems are the best tool to manage educational institutions efficiently and effectively.
+                                    ONLINE SYSTEMS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
                                 </p>
                             </div>
                         </div>
@@ -185,7 +185,7 @@
                             <div class="features-caption" style="text-align: justify;">
                                 <h3>INSTITUTES</h3>
                                 <p>
-                                    Online systems are the best tool to manage educational institutions efficiently and effectively.
+                                    ONLINE SYSTEMS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
                                 </p>
                             </div>
                         </div>
@@ -198,7 +198,7 @@
                             <div class="features-caption" style="text-align: justify;">
                                 <h3>UNIVERSITIES</h3>
                                 <p>
-                                    Online systems are the best tool to manage educational institutions efficiently and effectively.
+                                    ONLINE SYSTEMS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
                                 </p>
                             </div>
                         </div>
@@ -206,7 +206,7 @@
                 </div>
             </div>
         </div>
-        
+
         <!-- ? services-area 
         <div class="services-area">
             <div class="container">
