--- a/code.html
+++ b/code.html
@@ -180,7 +180,7 @@
                                 <img src="assets/img/icon/icon1.svg" alt="">
                             </div>
                             <div class="features-caption" style="text-align: justify;">
-                                <h3>SCHOOLS</h3>
+                                <h3>EMPLYEES</h3>
                                 <p>
                                     ONLINE SYSTEMS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND
                                     EFFECTIVELY.
@@ -194,7 +194,7 @@
                                 <img src="assets/img/icon/icon1.svg" alt="">
                             </div>
                             <div class="features-caption" style="text-align: justify;">
-                                <h3>INSTITUTES</h3>
+                                <h3>TEACHERS</h3>
                                 <p>
                                     ONLINE SYSTEMS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND
                                     EFFECTIVELY.
@@ -208,7 +208,7 @@
                                 <img src="assets/img/icon/icon1.svg" alt="">
                             </div>
                             <div class="features-caption" style="text-align: justify;">
-                                <h3>UNIVERSITIES</h3>
+                                <h3>STUDENTS</h3>
                                 <p>
                                     ONLINE SYSTEMS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND
                                     EFFECTIVELY.
