--- a/code.html
+++ b/code.html
@@ -413,7 +413,7 @@
                     <table id="example" class="display table-dark " style="width:150%">
                         <thead class="table-dark">
                             <tr>
-                                <th>NO</th>
+                                <th>MODULE </th>
                                 <th>TYPE </th>
                                 <th>APPLICATION </th>
                                 <th>SYSTEM </th>
@@ -3656,7 +3656,7 @@
                         </tbody>
                         <tfoot>
                             <tr>
-                                <th>NO</th>
+                                <th>MODULE </th>
                                 <th>TYPE </th>
                                 <th>APPLICATION </th>
                                 <th>SYSTEM </th>
