--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     
 </head>
 
-<body dir="rtl">
+<body >
     <!-- ? Preloader Start -->
     <div id="preloader-active">
         <div class="preloader d-flex align-items-center justify-content-center">
