--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 
 <!doctype html > 
-<html class="no-js" lang="zxx" dir="rtl">
+<html class="no-js" lang="en" dir="rtl">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
