--- a/home.html
+++ b/home.html
@@ -29,7 +29,7 @@
     
 </head>
 
-<body >
+<body dir="rtl">
     <!-- ? Preloader Start -->
     <div id="preloader-active">
         <div class="preloader d-flex align-items-center justify-content-center">
