--- a/home.html
+++ b/home.html
@@ -29,7 +29,7 @@
     
 </head>
 
-<body dir="rtl">
+<body >
     <!-- ? Preloader Start -->
     <div id="preloader-active">
         <div class="preloader d-flex align-items-center justify-content-center">
@@ -61,7 +61,7 @@
                                 <div class="menu-wrapper d-flex align-items-center justify-content-end">
                                     <!-- Main-menu -->
                                     <div class="main-menu d-none d-lg-block">
-                                        <nav>
+                                        <nav dir="rtl">
                                             <ul id="navigation">                                                                                          
                                                 <li><a href="index.html">HOME</a>
                                                     <ul class="submenu">
