--- a/home.html
+++ b/home.html
@@ -61,7 +61,7 @@
                                 <div class="menu-wrapper d-flex align-items-center justify-content-end">
                                     <!-- Main-menu -->
                                     <div class="main-menu d-none d-lg-block">
-                                        <nav dir="rtl">
+                                        <nav >
                                             <ul id="navigation">                                                                                          
                                                 <li><a href="index.html">HOME</a>
                                                     <ul class="submenu">
