--- a/index.html
+++ b/index.html
@@ -3845,7 +3845,7 @@
                 </div>
                </div>
 
-               <div class="container">
+               <div class="container" dir="rtl">
                 <div style="overflow-x:auto;">
                     <table id="example" class="display table-dark " style="width:100%">
                         <thead class="table-dark">
